# shipping-rust

./: .dockerignore  .gitignore  .pmat-gates.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.distroless-cc  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: bench.yml  ci.yml  release.yml
bench-results/: README.md
bench-results/latest/: SUMMARY.md  meta.txt
bench-results/latest/etl_throughput/1000/: estimates.json
bench-results/latest/etl_throughput/10000/: estimates.json
bench-results/latest/etl_throughput/100000/: estimates.json
bench-results/latest/report/: index.html
contracts/: etl-pipeline-v1.yaml
etl-bench/: Cargo.toml
etl-bench/benches/: throughput.rs
etl-bench/src/: lib.rs
etl-cli/: Cargo.toml
etl-cli/src/: main.rs
etl-cli/tests/: cli_integration.rs
etl-core/: Cargo.toml  README.md
etl-core/src/: lib.rs
