[package]
name = "etl-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
exclude.workspace = true
description = "Typed CSV → JSON Lines ETL core for the shipping-rust reference workspace"
keywords = ["etl", "csv", "json", "pipeline"]
categories = ["command-line-utilities", "parser-implementations"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
